--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,5 +49,8 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "terser-brunch": "^4.0.0"
+  }
 }
