--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "khalednk",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@apollo/graphql": "^14.5.0",
